BUG FIX: page size fits screen and does not overflow

--- a/flight-roulette-frontend/src/App.scss
+++ b/flight-roulette-frontend/src/App.scss
@@ -5,6 +5,9 @@ ul {
     list-style: none;
     padding: 0;
 }
+body {
+    background-color: black;
+}
 .app-container {
     @include mobile-padding;
 
