--- a/flight-roulette-frontend/src/pages/Background Video/BackgroundVideo.scss
+++ b/flight-roulette-frontend/src/pages/Background Video/BackgroundVideo.scss
@@ -19,8 +19,6 @@
 }
 
 .video-container {
-    min-width: 100%;
-    min-height: 100%;
     // object-fit: cover;
 
     position: absolute;
